# ggj2022

./: .gitignore  CMakeLists.txt  README.md
code/: config.h.in  main.cc  make_tileset.sh  tiles.cc
code/bits/: AudioManager.cc  AudioManager.h  ButtonsEntity.cc  ButtonsEntity.h  Constants.cc  Constants.h  CreditEntity.cc  CreditEntity.h  CreditScene.cc  CreditScene.h  GameData.cc  GameData.h  GameHub.cc  GameHub.h  GameRaw.cc  GameRaw.h  GameScenery.cc  GameScenery.h  GameState.cc  GameState.h  Hero.h  HeroEntity.cc  HeroEntity.h  LayerEntity.cc  LayerEntity.h  LevelData.cc  LevelData.h  LevelScene.cc  LevelScene.h  LevelScenery.cc  LevelScenery.h  LevelSelectorEntity.cc  LevelSelectorEntity.h  LevelState.cc  LevelState.h  LeverEntity.cc  LeverEntity.h  MenuScene.cc  MenuScene.h  MenuTitleEntity.cc  (+13 more)
data/hag/: level00.tmx  level01.tmx  level02.tmx  level04.tmx
data/raw/: montage-jump.sh  montage.sh
